# LearnDjango

./: pyproject.toml
learn_django/learn_django/: settings.py
learn_django/quotes/: forms.py  models.py  urls.py  views.py
learn_django/quotes/migrations/: 0001_initial.py
learn_django/quotes/static/quotes/: style.css
learn_django/quotes/templates/quotes/: base.html  create_quote.html  index.html
learn_django/quotes/templatetags/: extract.py
learn_django/users/: forms.py  urls.py  views.py
learn_django/users/templates/users/: login.html  logout.html  signup.html
learn_django/utils/: authors.json  config.ini  connect.py  models.py  seeds.py
