[tool.poetry]
name = "learndjango"
version = "0.1.0"
description = ""
authors = ["kseniavoitko <kseniavoytko95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
